#87 basic drizzle setup
