# apps/ee_core/src/db/schema.ts
@@ -1,0 +1,11 @@
+import { pgTable, serial, text, timestamp } from 'drizzle-orm/pg-core';
+
+export const user = pgTable('user', {
+	id: serial('id'),
+	name: text('name'),
+	email: text('email'),
+	password: text('password'),
+	role: text('role').$type<'admin' | 'customer'>(),
+	createdAt: timestamp('created_at'),
+	updatedAt: timestamp('updated_at')
+});
