# packages/types/src/core/resources/openapi-v1.yaml
@@ -1,33 +1,66 @@
 openapi: 3.0.3
 info:
   title: Dyn.Art Core Service API
-  description: API for validating API keys, fetching and uploading templates and assets.
+  description: wip
   version: 1.0.0
 servers:
   - url: https://api.dyn.art
     description: Production server
 
 paths:
-  /v1/validate-key:
+  /v1/health:
+    get:
+      summary: Health endpoint
+      description: Check whether api can be reached
+      tags:
+        - Health
+      responses:
+        '200':
+          description: Server is up and running
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HealthDto'
+
+  /v1/auth/login:
     post:
-      summary: Validate API key and count usage
+      summary: User login endpoint
+      description: Authenticate a user with their credentials
       tags:
         - Authentication
       requestBody:
+        description: User credentials
         required: true
         content:
           application/json:
             schema:
               type: object
               properties:
-                apiKey:
+                email: 
                   type: string
-                  description: API key to be validated
+                  format: email
+                  example: user@example.com
+                password:
+                  type: string
+                  format: password
+                  example: Admin12345!
               required:
-                - apiKey
+                - email
+                - password
       responses:
         '200':
-          description: API key is valid
+          description: Successful login
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    description: JWT token for authenticated user
+                    example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+        '400':
+          description: Invalid input
           content:
             application/json:
               schema:
@@ -35,7 +68,7 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: API key is valid
+                    example: Invalid email or password
         '401':
           description: Unauthorized
           content:
@@ -46,76 +79,8 @@ paths:
                   message:
                     type: string
                     example: Unauthorized
-
-  /v1/asset:
-    post:
-        summary: Upload asset for user
-        tags:
-          - Upload
-        requestBody:
-          required: true
-          content:
-            multipart/form-data:
-              schema:
-                type: object
-                properties:
-                  userId:
-                    type: string
-                  asset:
-                    type: string
-                    format: binary
-                required:
-                  - userId
-                  - asset
-        security:
-          - ApiKeyAuth: []
-        responses:
-          '201':
-            description: Asset uploaded successfully
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    message:
-                      type: string
-                      example: Asset uploaded successfully
-          '401':
-            description: Unauthorized
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    message:
-                      type: string
-                      example: Unauthorized
-    get:
-      summary: Get asset URL
-      tags:
-        - Assets
-      parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            type: string
-          description: ID of the asset
-      security:
-        - ApiKeyAuth: []
-      responses:
-        '200':
-          description: Presigned URL for the asset
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  url:
-                    type: string
-                    example: https://yourbucket.s3.amazonaws.com/asset-id?presigned-url
-        '401':
-          description: Unauthorized
+        '500':
+          description: Server error
           content:
             application/json:
               schema:
@@ -123,87 +88,25 @@ paths:
                 properties:
                   message:
                     type: string
-                    example: Unauthorized
-
-  /v1/template:
-    post:
-        summary: Upload template for user
-        tags:
-          - Upload
-        requestBody:
-          required: true
-          content:
-            multipart/form-data:
-              schema:
-                type: object
-                properties:
-                  userId:
-                    type: string
-                  template:
-                    type: string
-                    format: binary
-                required:
-                  - userId
-                  - template
-        security:
-          - ApiKeyAuth: []
-        responses:
-          '201':
-            description: Template uploaded successfully
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    message:
-                      type: string
-                      example: Template uploaded successfully
-          '401':
-            description: Unauthorized
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    message:
-                      type: string
-                      example: Unauthorized
-    get:
-      summary: Get template content
-      tags:
-        - Templates
-      parameters:
-        - name: path
-          in: query
-          required: true
-          schema:
-            type: string
-          description: Path of the template
-      security:
-        - ApiKeyAuth: []
-      responses:
-        '200':
-          description: Template content
-          content:
-            application/json:
-              schema:
-                type: string
-                example: Template content here
-        '401':
-          description: Unauthorized
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: Unauthorized
-   
-
+                    example: Internal server error
 components:
+  schemas:
+    HealthDto:
+      type: object
+      required:
+        - status
+        - message
+      properties:
+        message:
+          type: string
+        status:
+          $ref: '#/components/schemas/HealthStatus'
+    HealthStatus:
+      type: string
+      enum:
+        - Up
   securitySchemes:
-    ApiKeyAuth:
-      type: apiKey
-      in: header
-      name: x-api-key
+    BearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
